// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Form renders add if no note prop 1`] = `
<NoteForm
  onComplete={[MockFunction]}
>
  <div>
    <h3>
      I am the note form
    </h3>
    <form
      onSubmit={[Function]}
    >
      <label>
        Title:
        <input
          name="title"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
      <label>
        Notes:
        <textarea
          cols="50"
          name="notes"
          onChange={[Function]}
          rows="4"
          value=""
        />
      </label>
      <label>
        Completed:
        <input
          name="completed"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </label>
      <p>
        <button
          type="submit"
        >
          Submit
        </button>
      </p>
    </form>
  </div>
</NoteForm>
`;

exports[`Note Form renders add if no note prop 2`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "notes": "you can do it!",
            "title": "finish this lab",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <div>
    <h3>
      I am the note form
    </h3>
    <form
      onSubmit={[Function]}
    >
      <label>
        Title:
        <input
          name="title"
          onChange={[Function]}
          type="text"
          value="finish this lab"
        />
      </label>
      <label>
        Notes:
        <textarea
          cols="50"
          name="notes"
          onChange={[Function]}
          rows="4"
          value="you can do it!"
        />
      </label>
      <label>
        Completed:
        <input
          name="completed"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </label>
      <p>
        <button
          type="submit"
        >
          Submit
        </button>
      </p>
    </form>
  </div>
</NoteForm>
`;

exports[`Note Form renders correct input on add 1`] = `
<NoteForm
  onComplete={[MockFunction]}
>
  <div>
    <h3>
      I am the note form
    </h3>
    <form
      onSubmit={[Function]}
    >
      <label>
        Title:
        <input
          name="title"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
      <label>
        Notes:
        <textarea
          cols="50"
          name="notes"
          onChange={[Function]}
          rows="4"
          value=""
        />
      </label>
      <label>
        Completed:
        <input
          name="completed"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </label>
      <p>
        <button
          type="submit"
        >
          Submit
        </button>
      </p>
    </form>
  </div>
</NoteForm>
`;

exports[`Note Form renders correct input on add 2`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "notes": "you can do it!",
            "title": "finish this lab",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <div>
    <h3>
      I am the note form
    </h3>
    <form
      onSubmit={[Function]}
    >
      <label>
        Title:
        <input
          name="title"
          onChange={[Function]}
          type="text"
          value="finish this lab"
        />
      </label>
      <label>
        Notes:
        <textarea
          cols="50"
          name="notes"
          onChange={[Function]}
          rows="4"
          value="you can do it!"
        />
      </label>
      <label>
        Completed:
        <input
          name="completed"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </label>
      <p>
        <button
          type="submit"
        >
          Submit
        </button>
      </p>
    </form>
  </div>
</NoteForm>
`;

exports[`Note Form renders edit if note prop 1`] = `
<NoteForm
  note={
    Object {
      "completed": false,
      "key": "4",
      "notes": "you can do it!",
      "title": "finish this lab",
    }
  }
  onCancel={[MockFunction]}
  onComplete={[MockFunction]}
>
  <div>
    <h3>
      I am the note form
    </h3>
    <form
      onSubmit={[Function]}
    >
      <label>
        Title:
        <input
          name="title"
          onChange={[Function]}
          type="text"
          value="finish this lab"
        />
      </label>
      <label>
        Notes:
        <textarea
          cols="50"
          name="notes"
          onChange={[Function]}
          rows="4"
          value="you can do it!"
        />
      </label>
      <label>
        Completed:
        <input
          name="completed"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </label>
      <p>
        <button
          type="submit"
        >
          Submit
        </button>
        <button
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </p>
    </form>
  </div>
</NoteForm>
`;

exports[`Note Form renders edit if note prop 2`] = `
<NoteForm
  note={
    Object {
      "completed": false,
      "key": "4",
      "notes": "you can do it!",
      "title": "finish this lab",
    }
  }
  onCancel={[MockFunction]}
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": true,
            "key": "4",
            "notes": "you can do it!",
            "title": "finish this lab",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <div>
    <h3>
      I am the note form
    </h3>
    <form
      onSubmit={[Function]}
    >
      <label>
        Title:
        <input
          name="title"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
      <label>
        Notes:
        <textarea
          cols="50"
          name="notes"
          onChange={[Function]}
          rows="4"
          value=""
        />
      </label>
      <label>
        Completed:
        <input
          name="completed"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </label>
      <p>
        <button
          type="submit"
        >
          Submit
        </button>
        <button
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </p>
    </form>
  </div>
</NoteForm>
`;
